--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </span>
         </div>
         <div class="secImg">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+            <img src="assets/images/tv.png" alt="">
+            <video src="assets/videos/video-tv-in-0819.m4v"
                 autoplay loop muted></video>
         </div>
     </section>
@@ -60,7 +60,7 @@
 
     <section class="first second">
         <div class="secImg">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+            <img src="assets/images/mobile.jpg" alt="">
         </div>
         <div>
             <span>
@@ -84,8 +84,8 @@
             </span>
         </div>
         <div class="secImg">
-            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
+            <img src="assets/images/tv.png" alt="">
+            <video src="assets/videos/video1.m4v"
                 autoplay loop muted></video>
         </div>
     </section>
@@ -93,8 +93,7 @@
 
     <section class="first second">
         <div class="secImg">
-            <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
-                alt="">
+            <img src="assets/images/children.png" alt="">
         </div>
         <div>
             <span>
@@ -206,7 +205,7 @@
         </div>
         <div class="footer">
             <div class="footer-item">
-                <a href="faq">FAQ</a>
+                <a href="index.html">FAQ</a>
                 <a href="faq">Investor Relations</a>
                 <a href="faq">Privacy</a>
                 <a href="faq">Speed Test</a>
